setting up DB and working on user endpoint
